clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdlib__bsearch.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/bsearch.c" (c, x86_64-unknown-linux-gnu)
global __const.main.a : s32i[5] = [1, 3, 5, 7, 9] [cir_private, default, dso_local, constant]
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn bsearch(%arg0: void*, %arg1: void*, %arg2: u64i, %arg3: u64i, %arg4: ((void*, void*) -> s32i)*) -> void* [external, c];
fn cmp(%arg0: void*, %arg1: void*) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: void*, %arg1: void*):
        %27 = alloca void*, "a", align 8
        %28 = alloca void*, "b", align 8
        %29 = alloca s32i, "__retval", align 4
        store %arg0, %27
        store %arg1, %28
        %30 = load %27 : void*, align 8
        %31 = cast(bitcast) %30 : s32i*
        %32 = load %31 : s32i, align 4
        %33 = load %28 : void*, align 8
        %34 = cast(bitcast) %33 : s32i*
        %35 = load %34 : s32i, align 4
        %36 = sub %32, %35 : s32i [nsw]
        store %36, %29
        %37 = load %29 : s32i
        return %37
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[5], "a", align 16
    %2 = alloca s32i, "key", align 4
    %3 = alloca s32i*, "p", align 8
    %4 = const 0 : s32i
    store %4, %0
    %5 = get_global @__const.main.a : s32i[5]*
    copy %1, %5
    %6 = const 7 : s32i
    store %6, %2, align 4
    %7 = cast(bitcast) %2 : void*
    %8 = cast(array_to_ptrdecay) %1 : s32i*
    %9 = cast(bitcast) %8 : void*
    %10 = const 5 : u64i
    %11 = const 4 : u64i
    %12 = get_global @cmp : ((void*, void*) -> s32i)*
    %13 = call @bsearch(%7, %9, %10, %11, %12) : void* [all]
    %14 = cast(bitcast) %13 : s32i*
    store %14, %3, align 8
    %15 = get_global @printf : ((s8i*, ...) -> s32i)*
    %16 = get_global @.str : s8i[4]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    %18 = load %3 : s32i*, align 8
    %19 = cast(ptr_to_bool) %18 : bool
    %20 = ternary %19 ? { : s32i
        %25 = load %3 : s32i*, align 8
        %26 = load %25 : s32i, align 4
        yield %26
    } : {
        %24 = const -1 : s32i
        yield %24
    }
    %21 = call @printf(%17, %20) : s32i [all]
    %22 = const 0 : s32i
    store %22, %0
    %23 = load %0 : s32i
    return %23
}
