clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdlib__exit_code.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/exit_code.c" (c, x86_64-unknown-linux-gnu)
fn exit(%arg0: s32i) -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 3 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
